bump-nva-datamodel, publication-rest compiles